plugins/javaFX/testData/coercing/invalidInteger.fxml
<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.control.Button?>
<GridPane xmlns:fx="http://javafx.com/fxml">
    <Button GridPane.columnIndex=<error descr="Invalid value: unable to coerce to java.lang.Integer">"1.7"</error>/>
</GridPane>
